--- a/jpa-rest/src/main/resources/application.yml
+++ b/jpa-rest/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 spring:
   datasource:
     # http://localhost:8080/h2-console/
-    # url: jdbc:h2:mem:testdb
-    url: jdbc:h2:file:./data/testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
+     url: jdbc:h2:mem:testdb
+#    url: jdbc:postgresql://db.zuhfpfrkfrwhybplamhm.supabase.co:5432/postgres
+#    username: postgres
+#    password: Zyxsmilebest;
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:h2:file:./data/testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password: password
   h2:
     console:
       enabled: true
   jpa:
     hibernate:
 #      schema tool??????????????
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
