--- a/jpa-rest/pom.xml
+++ b/jpa-rest/pom.xml
@@ -59,8 +59,8 @@
 
 		<dependency>
 			<groupId>cn.hutool</groupId>
-			<artifactId>hutool-core</artifactId>
-			<version>5.8.18</version>
+			<artifactId>hutool-all</artifactId>
+			<version>5.4.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
