--- a/jpa-rest/pom.xml
+++ b/jpa-rest/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>jxls-poi</artifactId>
 			<version>2.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
