--- a/jpa-rest/src/main/resources/application.yml
+++ b/jpa-rest/src/main/resources/application.yml
@@ -16,5 +16,5 @@ spring:
   jpa:
     hibernate:
 #      schema tool??????????????
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
