--- a/jpa-rest/pom.xml
+++ b/jpa-rest/pom.xml
@@ -76,6 +76,13 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+<!--		代码生成器-->
+		<dependency>
+			<groupId>com.github.davidfantasy</groupId>
+			<artifactId>mybatis-plus-generator-ui</artifactId>
+			<version>2.0.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
