feat: 读取引用类型数据

--- a/base_configuration/src/main/resources/application.yml
+++ b/base_configuration/src/main/resources/application.yml
@@ -3,10 +3,17 @@ name: vhang
 server:
   port: 8080
 
-arrs:
-  - vhz
-  - 234
-  - 123
+user:
+  name: vhang
+  age: 12
+  aliases:
+    - vhz
+    - 234
+    - 123
 
+arrs:
+- vhz
+- 234
+- 123
 baseDir: c:\windows\system32
 tempDir: ${baseDir}\temp
