(feat: add redis common module)

--- a/trip/trip-gateway/src/main/resources/application.yml
+++ b/trip/trip-gateway/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: trip-gateway
   cloud:
-    nacon:
+    nacos:
       discovery: # 服务注册中心地址
         server-addr: 127.0.0.1:8848
       gateway:
