--- a/trip/trip-common/pom.xml
+++ b/trip/trip-common/pom.xml
@@ -14,6 +14,7 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>common-core</module>
+        <module>common-redis</module>
     </modules>
 
     <properties>
